# tabletop_pointcloud_segmentation_ros

./: CMakeLists.txt  README.md  package.xml
common/: CMakeLists.txt
common/include/common/: aliases.h  bounding_box.h
common/src/: bounding_box.cpp
ros/config/: PlaneSegmentation.cfg  PointcloudAccumulator.cfg  angle_view_config_working.yaml  pointcloud_segmentation_constraints.yaml
ros/include/tabletop_pointcloud_segmentation_ros/: bounding_box_visualizer.h  clustered_point_cloud_visualizer.h  label_visualizer.h  octree_pointcloud_occupancy_colored.h  plane_segmentation.h  table_top_segmentation_ros.h
ros/include/tabletop_pointcloud_segmentation_ros/impl/: bounding_box_visualizer.hpp  clustered_point_cloud_visualizer.hpp  helpers.hpp
ros/launch/: table_top_segmentation.launch
ros/scripts/: pointcloud_data_collection.py
ros/src/: plane_segmentation.cc  table_top_segmentation_ros.cpp
